objects/Subscription_Upgrade__e.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <label>ContactID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Offer_automaton_text__c</fullName>
        <label>Event Offer automaton text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_level__c</fullName>
        <label>Membership level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Campaign__c</fullName>
        <label>Sale Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <label>Subscription Upgrade</label>
    <pluralLabel>Subscription Upgrades</pluralLabel>
</CustomObject>